objects/Visit_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Branch</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visits Plan</relationshipLabel>
        <relationshipName>Visits_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accounts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created to remove error</description>
        <label>Accounts</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visits Plan (Accounts)</relationshipLabel>
        <relationshipName>Visits_Plan1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch_Code__c</fullName>
        <formula>Account__r.Parent.Branch_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Code__c</fullName>
        <formula>Account__r.Parent.Parent.Distributor_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distributor Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <formula>TEXT(  Account__r.Frequency__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lat_and_Long__c</fullName>
        <label>Lat and Long</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Monday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rlt_Code__c</fullName>
        <formula>Account__r.StoreCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retailer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seller_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Seller Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Branch, Store</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Visits Plan</relationshipLabel>
        <relationshipName>Visits_Plan</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for Visit Plan</description>
        <label>Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thursday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WK1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WK1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WK2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WK2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WK3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WK3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wednesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <label>Visit Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Accounts__c</columns>
        <columns>Seller_Name__c</columns>
        <columns>Monday__c</columns>
        <columns>Tuesday__c</columns>
        <columns>Wednesday__c</columns>
        <columns>Thursday__c</columns>
        <columns>Friday__c</columns>
        <columns>Saturday__c</columns>
        <columns>Sunday__c</columns>
        <columns>WK1__c</columns>
        <columns>WK2__c</columns>
        <columns>WK3__c</columns>
        <columns>WK4__c</columns>
        <columns>WK5__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Visit Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visits Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>